--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -2,17 +2,19 @@
 # It can be edited online at https://dandiarchive.org/dandiset/000128
 # and obtained from the dandiarchive.
 '@context': https://raw.githubusercontent.com/dandi/schema/master/releases/0.5.1/context.json
+about: []
+access: []
 assetsSummary:
   numberOfBytes: 0
   numberOfFiles: 0
   schemaKey: AssetsSummary
-citation: ',  (2021) Macaque primary motor and dorsal premotor cortex spiking activity
-  during delayed reaching (Version draft) [Data set]. DANDI archive. https://dandiarchive.org/dandiset/000128/draft'
+citation: Pei, Felix (2021) Macaque primary motor and dorsal premotor cortex spiking
+  activity during delayed reaching (Version draft) [Data set]. DANDI archive. https://dandiarchive.org/dandiset/000128/draft
 contributor:
 - affiliation: []
   email: felp8484@gmail.com
   includeInCitation: true
-  name: ', '
+  name: Pei, Felix
   roleName:
   - dcite:ContactPerson
   schemaKey: Person
@@ -23,12 +25,21 @@ description: This dataset contains sorted unit spiking times and behavioral data
   implanted in the motor cortex (M1) and dorsal premotor cortex (PMd). Cursor position,
   hand position, and eye position were also recorded during the experiment, and hand
   velocity was calculated offline from hand position.
+ethicsApproval: []
 id: DANDI:000128/draft
 identifier: DANDI:000128
+keywords: []
+license: []
 manifestLocation:
 - https://api.dandiarchive.org/api/dandisets/000128/versions/draft/assets/
 name: Macaque primary motor and dorsal premotor cortex spiking activity during delayed
   reaching
+protocol: []
+relatedResource: []
+repository: https://dandiarchive.org/
+schemaKey: Dandiset
 schemaVersion: 0.5.1
+studyTarget: []
 url: https://dandiarchive.org/dandiset/000128/draft
 version: draft
+wasGeneratedBy: []
