--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -5,9 +5,29 @@
 about: []
 access: []
 assetsSummary:
-  numberOfBytes: 0
-  numberOfFiles: 0
+  approach:
+  - name: electrophysiological approach
+    schemaKey: ApproachType
+  dataStandard:
+  - identifier: RRID:SCR_015242
+    name: Neurodata Without Borders (NWB)
+    schemaKey: StandardsType
+  measurementTechnique:
+  - name: spike sorting technique
+    schemaKey: MeasurementTechniqueType
+  - name: analytical technique
+    schemaKey: MeasurementTechniqueType
+  numberOfBytes: 950536459
+  numberOfFiles: 8
+  numberOfSubjects: 1
   schemaKey: AssetsSummary
+  species:
+  - identifier: http://purl.obolibrary.org/obo/NCBITaxon_9544
+    name: Rhesus monkey
+    schemaKey: SpeciesType
+  variableMeasured:
+  - Units
+  - ProcessingModule
 citation: Pei, Felix (2021) Macaque primary motor and dorsal premotor cortex spiking
   activity during delayed reaching (Version draft) [Data set]. DANDI archive. https://dandiarchive.org/dandiset/000128/draft
 contributor:
@@ -18,6 +38,7 @@ contributor:
   roleName:
   - dcite:ContactPerson
   schemaKey: Person
+dateCreated: '2021-08-21T19:26:10.452709+00:00'
 description: This dataset contains sorted unit spiking times and behavioral data from
   a macaque performing a delayed reaching task. The experimental task was a center-out
   reaching task with obstructing barriers forming a maze, resulting in a variety of
