--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -5,29 +5,9 @@
 about: []
 access: []
 assetsSummary:
-  approach:
-  - name: electrophysiological approach
-    schemaKey: ApproachType
-  dataStandard:
-  - identifier: RRID:SCR_015242
-    name: Neurodata Without Borders (NWB)
-    schemaKey: StandardsType
-  measurementTechnique:
-  - name: spike sorting technique
-    schemaKey: MeasurementTechniqueType
-  - name: analytical technique
-    schemaKey: MeasurementTechniqueType
-  numberOfBytes: 950536459
-  numberOfFiles: 8
-  numberOfSubjects: 1
+  numberOfBytes: 0
+  numberOfFiles: 0
   schemaKey: AssetsSummary
-  species:
-  - identifier: http://purl.obolibrary.org/obo/NCBITaxon_9544
-    name: Rhesus monkey
-    schemaKey: SpeciesType
-  variableMeasured:
-  - Units
-  - ProcessingModule
 citation: Pei, Felix (2021) Macaque primary motor and dorsal premotor cortex spiking
   activity during delayed reaching (Version draft) [Data set]. DANDI archive. https://dandiarchive.org/dandiset/000128/draft
 contributor:
