--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -2,14 +2,25 @@
 # It can be edited online at https://dandiarchive.org/dandiset/000128
 # and obtained from the dandiarchive.
 '@context': https://raw.githubusercontent.com/dandi/schema/master/releases/0.5.1/context.json
-about: []
-access: []
+about:
+- identifier: UBERON:0001384
+  name: Primary motor cortex
+  schemaKey: Anatomy
+- identifier: UBERON:0016634
+  name: Premotor cortex
+  schemaKey: Anatomy
+access:
+- contactPoint:
+    schemaKey: ContactPoint
+  schemaKey: AccessRequirements
+  status: dandi:OpenAccess
 assetsSummary:
   numberOfBytes: 0
   numberOfFiles: 0
   schemaKey: AssetsSummary
-citation: Macaque primary motor and dorsal premotor cortex spiking activity during
-  delayed reaching (2021). (Version draft) [Data set]. DANDI archive. https://dandiarchive.org/dandiset/000128/draft
+citation: Churchland, Mark; Kaufman, Matthew (2021) Macaque primary motor and dorsal
+  premotor cortex spiking activity during delayed reaching (Version draft) [Data set].
+  DANDI archive. https://dandiarchive.org/dandiset/000128/draft
 contributor:
 - affiliation: []
   email: felp8484@gmail.com
@@ -18,6 +29,34 @@ contributor:
   roleName:
   - dcite:ContactPerson
   - dcite:Maintainer
+  schemaKey: Person
+- affiliation:
+  - identifier: https://ror.org/00f54p054
+    name: Stanford University
+    schemaKey: Affiliation
+  - identifier: https://ror.org/00hj8s172
+    name: Columbia University
+    schemaKey: Affiliation
+  identifier: 0000-0001-9123-6526
+  includeInCitation: true
+  name: Churchland, Mark
+  roleName:
+  - dcite:Author
+  - dcite:DataCollector
+  schemaKey: Person
+- affiliation:
+  - identifier: https://ror.org/00f54p054
+    name: Stanford University
+    schemaKey: Affiliation
+  - identifier: https://ror.org/024mw5h28
+    name: University of Chicago
+    schemaKey: Affiliation
+  identifier: 0000-0002-8072-023X
+  includeInCitation: true
+  name: Kaufman, Matthew
+  roleName:
+  - dcite:Author
+  - dcite:DataCollector
   schemaKey: Person
 dateCreated: '2021-08-21T19:26:10.452709+00:00'
 description: This dataset contains sorted unit spiking times and behavioral data from
@@ -30,14 +69,29 @@ description: This dataset contains sorted unit spiking times and behavioral data
 ethicsApproval: []
 id: DANDI:000128/draft
 identifier: DANDI:000128
-keywords: []
-license: []
+keywords:
+- Neural Latents Benchmark
+license:
+- spdx:CC-BY-4.0
 manifestLocation:
 - https://api.dandiarchive.org/api/dandisets/000128/versions/draft/assets/
 name: Macaque primary motor and dorsal premotor cortex spiking activity during delayed
   reaching
 protocol: []
-relatedResource: []
+relatedResource:
+- identifier: 10.1016/j.neuron.2010.09.015
+  name: 'Cortical preparatory activity: representation of movement or first cog in
+    a dynamical machine?'
+  relation: dcite:IsDescribedBy
+  repository: Neuron
+  schemaKey: Resource
+  url: https://doi.org/10.1016/j.neuron.2010.09.015
+- identifier: 10.1038/nature11129
+  name: Neural population dynamics during reaching
+  relation: dcite:IsDescribedBy
+  repository: Nature
+  schemaKey: Resource
+  url: https://doi.org/10.1038/nature11129
 repository: https://dandiarchive.org/
 schemaKey: Dandiset
 schemaVersion: 0.5.1
